@@ -3,6 +3,7 @@ ver 0.22.3 (not yet released)
   - add option "as_directory", making CUE file expansion optional
 * filter
   - fix garbage after "Audio format not supported by filter" message
+  - ffmpeg: support planar output
 
 ver 0.22.2 (2020/10/28)
 * database
